Fix spacing

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -13,7 +13,7 @@ table.main-table {
   margin-left: auto;
   margin-right: auto;
   text-align: left;
-  padding: 20px 20px 20px 20px;
+  padding: 0px 20px 20px 20px;
 }
 th.row-title { 
   width: 30%;
